[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/BlockStart.png" type="Texture" id=1]
[ext_resource path="res://scripts/TextureLine.gd" type="Script" id=2]
[ext_resource path="res://images/BlockMid.png" type="Texture" id=3]
[ext_resource path="res://images/BlockEnd.png" type="Texture" id=4]

[node name="TextureLine" type="Node2D"]
script = ExtResource( 2 )

[node name="BlockMid" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="BlockStart" type="Sprite" parent="."]
position = Vector2( -50, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="BlockEnd" type="Sprite" parent="."]
position = Vector2( 50, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
